@@ -1,11 +1,8 @@
 package everoutproject.Event.application.dtos;
 
-import everoutproject.Event.rest.dtos.event.EventDTO;
-import everoutproject.Event.rest.dtos.event.EventLocationDTO;
-import everoutproject.Event.domain.model.event.Event;
-import everoutproject.Event.domain.model.event.EventLocation;
-
-import java.util.stream.Collectors;
+import everoutproject.Event.domain.model.event.*;
+import everoutproject.Event.domain.model.organizer.Organizer;
+import everoutproject.Event.rest.dtos.event.response.*;
 
 public class EventMapperDTO {
 
@@ -15,11 +12,34 @@ public class EventMapperDTO {
                 event.getName(),
                 event.getDescription(),
                 toLocationDTO(event.getLocation()),  // structured location
-                event.getDate(),
+
+                event.getStartDate(),
+                event.getEndDate(),
+                event.getCancelDeadline(),
+
+                event.getAppointments().stream().map(EventMapperDTO::toAppointmentDTO).toList(),
+
                 event.getPrice(),
+                event.getDepositPercent(),
                 event.getStatus().name(),
                 event.getCancellationReason(),
-                event.getImages().stream().map(img -> img.getId()).collect(Collectors.toList())
+
+                event.getMinParticipants(),
+                event.getMaxParticipants(),
+                event.getBookedParticipants(),
+
+                event.getRequirements().stream().map(EventMapperDTO::toRequirementDTO).toList(),
+                event.getEquipment().stream().map(EventMapperDTO::toEquipmentDTO).toList(),
+                event.getAdditionalPackages().stream().map(EventMapperDTO::toAdditionalPackageDTO).toList(),
+
+                event.getCategory().name(),
+                event.getOrganizer().getId(),
+                toOrganizerDTO(event.getOrganizer()),
+                event.getDurationInDays(),
+
+                event.getFeedback().stream().map(EventMapperDTO::toFeedbackDTO).toList(),
+
+                event.getImages().stream().map(EventImage::getId).toList()
         );
     }
 
@@ -34,4 +54,57 @@ public class EventMapperDTO {
                 location.getCountry()
         );
     }
+
+    private static EventAppointmentDTO toAppointmentDTO(EventAppointment a) {
+        return new EventAppointmentDTO(
+                a.getId(),
+                a.getStartDate(),
+                a.getEndDate(),
+                a.isSeasonal()
+        );
+    }
+
+    private static RequirementDTO toRequirementDTO(Requirement r) {
+        return new RequirementDTO(
+                r.getId(),
+                r.getDescription()
+        );
+    }
+
+    private static EventEquipmentDTO toEquipmentDTO(EventEquipment e) {
+        return new EventEquipmentDTO(
+                e.getId(),
+                e.getName(),
+                e.isRentable()
+        );
+    }
+
+    private static AdditionalPackageDTO toAdditionalPackageDTO(AdditionalPackage p) {
+        return new AdditionalPackageDTO(
+                p.getId(),
+                p.getTitle(),
+                p.getDescription(),
+                p.getPrice()
+        );
+    }
+
+    private static EventFeedbackDTO toFeedbackDTO(EventFeedback f) {
+        return new EventFeedbackDTO(
+                f.getId(),
+                f.getRating(),
+                f.getComment()
+        );
+    }
+
+    private static OrganizerDTO toOrganizerDTO(Organizer organizer) {
+        if (organizer == null) return null;
+
+        return new OrganizerDTO(
+                organizer.getId(),
+                organizer.getName(),
+                organizer.getContactEmail(),
+                organizer.getPhone()
+        );
+    }
 }
+
